@@ -8,6 +8,7 @@ Change Log:
 3.0.4 ( 2017-04-xx )
 - Fixed fetching posts.
 - Fixed a problem on the Customizer page - removed clone option.
+- Improved "Create a custom sidebar to get started." box.
 
 3.0.3 ( 2017-03-22 )
 - Removed WP Checkup banner.
